--- a/pages/11504.html
+++ b/pages/11504.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8772/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -817,40 +817,76 @@ margin-left: 0em;
 </div>
 </div>
 
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>What is called <em>picture number</em> in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> is a certain <a class='existingWikiWord' href='/nlab/show/graded+set'>grading</a> originally seen in the <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> of the <a class='existingWikiWord' href='/nlab/show/spinning+string'>NSR superstring</a> (<a href='#FriedanMartinecShenker86'>Friedan-Martinec-Shenker 86</a>).</p>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometric</a> meaning was clarified in <a href='#Belopolsky97b'>Belopolsky 97b</a> in terms of an extra grading on <a class='existingWikiWord' href='/nlab/show/differential+form+on+a+supermanifold'>differential forms on supermanifolds</a> induced from a choice of <em>integral top-form</em> needed for a notion of <a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a>, see <a href='#CatenacciGrassiNoja18'>Catenacci-Grassi-Noja 18</a></p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/string+field+theory'>superstring field theory</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/string+field+theory'>superstring field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
 
+<p>The appearance in the <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> of the <a class='existingWikiWord' href='/nlab/show/spinning+string'>NSR superstring</a> is due to</p>
+
+<ul>
+<li id='FriedanMartinecShenker86'><a class='existingWikiWord' href='/nlab/show/Daniel+Friedan'>Daniel Friedan</a>, <a class='existingWikiWord' href='/nlab/show/Emil+Martinec'>Emil Martinec</a>, <a class='existingWikiWord' href='/nlab/show/Stephen+Shenker'>Stephen Shenker</a>, <em>Conformal invariance, supersymmetry and string theory, Nucl. Phys., B271 (1986) 93</em></li>
+</ul>
+
 <p>A <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometric</a> interpretation of picture changing operators as part of the geometry of <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surfaces</a> is given in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Alexander+Belopolsky'>Alexander Belopolsky</a>, <em>New Geometrical Approach to Superstrings</em> (<a href='http://arxiv.org/abs/hep-th/9703183'>arXiv:hep-th/9703183</a>)</li>
+<li id='Belopolsky97'>
+<p><a class='existingWikiWord' href='/nlab/show/Alexander+Belopolsky'>Alexander Belopolsky</a>, <em>New Geometrical Approach to Superstrings</em> (<a href='http://arxiv.org/abs/hep-th/9703183'>arXiv:hep-th/9703183</a>)</p>
+</li>
+
+<li id='Belopolsky97b'>
+<p><a class='existingWikiWord' href='/nlab/show/Alexander+Belopolsky'>Alexander Belopolsky</a>, <em>Picture changing operators in supergeometry and superstring theory</em> (<a href='https://arxiv.org/abs/hep-th/9706033'>arXiv:hep-th/9706033</a>)</p>
+</li>
 </ul>
 
 <p>further amplified in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, appendix D of <em>Notes On Super Riemann Surfaces And Their Moduli</em> (<a href='http://arxiv.org/abs/1209.2459'>arXiv:1209.2459</a>)</li>
+<li id='Witten12'><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, appendix D of <em>Notes On Super Riemann Surfaces And Their Moduli</em> (<a href='http://arxiv.org/abs/1209.2459'>arXiv:1209.2459</a>)</li>
+</ul>
+
+<p>In this perspective picture number is an extra grading on <a class='existingWikiWord' href='/nlab/show/differential+form+on+a+supermanifold'>differential forms on supermanifolds</a> induced from a choice of <em>integral top-form</em> needed to define <a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a>, see</p>
+
+<ul>
+<li id='CatenacciGrassiNoja18'>R. Catenacci, P.A. Grassi, S. Noja, <em>Superstring Field Theory, Superforms and Supergeometry</em> (<a href='https://arxiv.org/abs/1807.09563'>arXiv:1807.09563</a>)</li>
 </ul>
 
 <p>
+</p>
+
+<p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 26, 2018 at 03:53:03.
+  Last revised on July 26, 2018 at 07:57:36.
   See the <a href="https://ncatlab.org/nlab/history/picture changing operator" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/picture+changing+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/picture+changing+operator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/picture+changing+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/picture+changing+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/picture+changing+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/picture+changing+operator/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/picture+changing+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/picture+changing+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/picture changing operator/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
