--- a/pages/1566.html
+++ b/pages/1566.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8775/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -497,14 +496,20 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a><ul><li><a href='#in_sets'>In Sets</a></li><li><a href='#in_any_symmetric_monoidal_category'>In any symmetric monoidal category</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
+<h3 id='in_sets'>In Sets</h3>
+
 <p>A <em>commutative monoid</em> is a <a class='existingWikiWord' href='/nlab/show/monoid'>monoid</a> where the multiplication satisfies the commutative law:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7abc56df594283aa5711d8c2fd658c9a341c334c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mi>y</mi><mo>=</mo><mi>y</mi><mi>x</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'>x y = y x.</annotation></semantics></math></div>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5bff05bb4504140690ee49673e710ba9a4919867_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mi>y</mi><mo>=</mo><mi>y</mi><mi>x</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'>x y = y x.</annotation></semantics></math></div>
 <p>Alternatively, just as a <a class='existingWikiWord' href='/nlab/show/monoid'>monoid</a> can be seen as a <a class='existingWikiWord' href='/nlab/show/category'>category</a> with one object, a commutative monoid can be seen as a <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a> with one object and one morphism (or equivalently, a <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a> with one object).</p>
 
 <p>Commutative monoids with <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphisms</a> between them form a <em><a class='existingWikiWord' href='/nlab/show/category+of+monoids'>category of commutative monoids</a></em>.</p>
+
+<h3 id='in_any_symmetric_monoidal_category'>In any symmetric monoidal category</h3>
+
+<p>More generally, the concept makes sense <a class='existingWikiWord' href='/nlab/show/internalization'>internal</a> to any <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a>. See at <em><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+category'>commutative monoid in a symmetric monoidal category</a></em> for details.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -521,6 +526,22 @@ margin-left: 0em;
 <p>Every bounded <a class='existingWikiWord' href='/nlab/show/semilattice'>semilattice</a> is an <em>idempotent</em> commutative monoid, and every idempotent commutative monoid yields a semilattice, (see that entry).</p>
 </li>
 </ul>
+
+<p>Examples of <a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+category'>commutative monoids in a symmetric monoidal category</a>:</p>
+
+<ol>
+<li>
+<p>A commutative monoid in the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal</a> <a class='existingWikiWord' href='/nlab/show/Vect'>category of vector spaces</a> is a <a class='existingWikiWord' href='/nlab/show/commutative+algebra'>commutative algebra</a>;</p>
+</li>
+
+<li>
+<p>A commutative monoid in the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal</a> <a class='existingWikiWord' href='/nlab/show/category+of+chain+complexes'>category of chain complexes</a> of vector spaces is a <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative algebra</a>;</p>
+</li>
+
+<li>
+<p>A commutative monoid in the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal</a> <a class='existingWikiWord' href='/nlab/show/chain+complex+in+super+vector+spaces'>category of chain complexes of super vector spaces</a> is a <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative superalgebra</a>.</p>
+</li>
+</ol>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -580,19 +601,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 21, 2017 03:24:18 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  <p>
+  Last revised on July 27, 2018 at 05:12:49.
+  See the <a href="https://ncatlab.org/nlab/history/commutative monoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/commutative+monoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutative+monoid/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/commutative+monoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutative+monoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/commutative+monoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutative+monoid/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/commutative+monoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutative+monoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/commutative monoid/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/commutative+monoid" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/commutative+monoid" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/commutative+monoid" id="view_source" rel="nofollow">Source</a>
