--- a/pages/19541.html
+++ b/pages/19541.html
@@ -716,7 +716,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
+<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
 
 <ul>
 <li>
@@ -742,7 +742,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Cisinski+model+structure'>Cisinski model structure</a></li>
 </ul>
 
-<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+for+infinity-groupoids'>for ∞-groupoids</a></p>
 
@@ -794,7 +794,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
 
 <ul>
 <li>
@@ -806,7 +806,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
+<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
 
 <ul>
 <li>
@@ -818,7 +818,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
+<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
 
 <h4 id='general'>general</h4>
 
@@ -888,7 +888,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -912,13 +912,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-categories'>on dg-categories</a></li>
 </ul>
 
-<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
+<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
 
 <ul>
 <li>
@@ -932,7 +932,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -956,7 +956,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
+<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_56fe01bdc58a7392d5ae4c559baeaec7eaa15006_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
 
 <ul>
 <li>
@@ -993,7 +993,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a> over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a> carries a <em>projective</em> <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> whose <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the underlying <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphisms</a> and whose <a class='existingWikiWord' href='/nlab/show/fibration'>fibrations</a> are the degreewise <a class='existingWikiWord' href='/nlab/show/surjection'>surjections</a> (all either in unbounded degree, in non-negative degree or in non-positive degree).</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/chain+complex+in+super+vector+spaces'>chain complexes of super vector spaces</a> over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a> carries a <em>projective</em> <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> whose <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the underlying <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphisms</a> and whose <a class='existingWikiWord' href='/nlab/show/fibration'>fibrations</a> are the degreewise <a class='existingWikiWord' href='/nlab/show/surjection'>surjections</a> (all either in unbounded degree, in non-negative degree or in non-positive degree).</p>
 
 <p>The model structure is hence the direct generalization of the projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structure on chain complexes</a> of plain <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a>, to which it reduces on the objects concentrated in even super-degree.</p>
 
@@ -1023,14 +1023,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on July 25, 2018 at 15:24:40.
+  Last revised on July 27, 2018 at 05:39:02.
   See the <a href="https://ncatlab.org/nlab/history/model structure on chain complexes of super vector spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+on+chain+complexes+of+super+vector+spaces/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/model structure on chain complexes of super vector spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
