--- a/pages/2443.html
+++ b/pages/2443.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong><a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebra</a></strong> and (<a class='existingWikiWord' href='/nlab/show/synthetic+differential+supergeometry'>synthetic</a> ) <strong><a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a></strong></p>
+      <p><strong><a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebra</a></strong> and (<a class='existingWikiWord' href='/nlab/show/synthetic+differential+supergeometry'>synthetic</a> ) <strong><a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a></strong></p>
 
 <h2 id='background'>Background</h2>
 
@@ -371,8 +370,16 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/chain+complex+in+super+vector+spaces'>chain complex of super vector spaces</a> (<a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes+of+super+vector+spaces'>model structure</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative superalgebra</a> (<a class='existingWikiWord' href='/nlab/show/model+structure+on+differential+graded-commutative+superalgebras'>model structure</a>)</p>
 </li>
 
 <li>
@@ -466,7 +473,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -547,19 +554,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  8, 2017 06:44:18 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  <p>
+  Last revised on July 27, 2018 at 05:45:45.
+  See the <a href="https://ncatlab.org/nlab/history/supergeometry - contents" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supergeometry+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supergeometry+-+contents/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/supergeometry+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supergeometry+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/supergeometry+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supergeometry+-+contents/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/supergeometry+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supergeometry+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/supergeometry - contents/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/supergeometry+-+contents" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/supergeometry+-+contents" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/supergeometry+-+contents" id="view_source" rel="nofollow">Source</a>
