--- a/pages/7737.html
+++ b/pages/7737.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -307,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -424,7 +424,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+infinity-groupoid'>smooth ∞-groupoid</a>, <a class='existingWikiWord' href='/nlab/show/Lie+infinity-algebroid'>∞-Lie algebroid</a></p>
+<p><span class='newWikiWord'>smooth ∞-groupoid<a href='/nlab/new/smooth+%E2%88%9E-groupoid'>?</a></span>, <span class='newWikiWord'>∞-Lie algebroid<a href='/nlab/new/%E2%88%9E-Lie+algebroid'>?</a></span></p>
 </li>
 </ul>
 </li>
@@ -495,7 +495,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Maybe one can assign a <a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a> to a stratified space. This has been studied for <a class='existingWikiWord' href='/nlab/show/poset-stratified+space'>poset-stratified spaces</a> – see there under “exit path <math class='maruku-mathml' display='inline' id='mathml_9460ee754b866271bb7edc44641f9abe3077ed94_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category” for more.</p>
+<p>Maybe one can assign a <a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a> to a stratified space. This has been studied for <a class='existingWikiWord' href='/nlab/show/poset-stratified+space'>poset-stratified spaces</a> – see there under “exit path <math class='maruku-mathml' display='inline' id='mathml_3e3651e9b3a3d0e3a6f250faf7d8468522f60a85_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category” for more.</p>
 </li>
 
 <li>
@@ -557,7 +557,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Jonathan Woolf, <em>Transversal homotopy theory</em> (<a href='http://arxiv.org/abs/0910.3322'>arXiv:0910.3322</a>)</p>
+<p><span class='newWikiWord'>Jonathan Woolf<a href='/nlab/new/Jonathan+Woolf'>?</a></span>, <em>Transversal homotopy theory</em> (<a href='http://arxiv.org/abs/0910.3322'>arXiv:0910.3322</a>)</p>
 </li>
 
 <li>
@@ -586,14 +586,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 10, 2018 at 10:44:57.
+  Last revised on July 27, 2018 at 06:23:16.
   See the <a href="https://ncatlab.org/nlab/history/stratified space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stratified+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratified+space/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/stratified+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratified+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stratified+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stratified+space/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/stratified+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stratified+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stratified space/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
