--- a/pages/1788.html
+++ b/pages/1788.html
@@ -310,18 +310,20 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/mathematics'>maths</a></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_ed074a0ad03bcf2b7eb19c569e985e9403387af1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathcolor='blue'><mi>ABC</mi></mstyle></mrow><annotation encoding='application/x-tex'>\color{blue}{ABC}</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 27, 2018 at 08:45:47.
+  Last revised on July 27, 2018 at 09:27:14.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1594" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1594 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1595" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1595 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
