--- a/pages/16277.html
+++ b/pages/16277.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,17 +307,17 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Karl Rosenkranz</strong> (1805-1879) was a German philosopher and a leading exponent of the <em>Hegel school</em>. A student, editor and biographer of <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>G. W. F. Hegel</a>, Rosenkranz is probably the top candidate for the title of greatest Hegel scholar of all time.</p>
+      <p><strong>Karl Rosenkranz</strong> (1805-1879) was a German philosopher and a leading exponent of the <em>Hegel school</em>. A student, editor and biographer of <a class='existingWikiWord' href='/nlab/show/G.+W.+F.+Hegel'>G. W. F. Hegel</a>, Rosenkranz is probably the top candidate for the title of greatest Hegel scholar of all time.</p>
 
 <p>Particularly noteworthy are his writings on logic as they present a careful (and eminently readable!) reworking of Hegel’s system and come as close to a ‘third edition’ of the latter’s <em>Wissenschaft der Logik</em> - <a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a> as can be.</p>
 
-<p>As is suitable for a member of the philosophical faculty of the university of Königsberg where he held the chair of <span class='newWikiWord'>J. F. Herbart<a href='/nlab/new/J.+F.+Herbart'>?</a></span>, Rosenkranz stressed the continuity between the Hegelian system and <a class='existingWikiWord' href='/nlab/show/Immanuel+Kant'>Kant</a>’s enterprise of transcendental philosophy as initiated in the <em>Kritik der reinen Vernunft</em>.</p>
+<p>As is suitable for a member of the philosophical faculty of the university of Königsberg where he held the chair of <span class='newWikiWord'>J. F. Herbart<a href='/nlab/new/J.+F.+Herbart'>?</a></span>, Rosenkranz stressed the continuity between the Hegelian system and <a class='existingWikiWord' href='/nlab/show/Kant'>Kant</a>‘s enterprise of transcendental philosophy as initiated in the <em>Kritik der reinen Vernunft</em>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>G. W. F. Hegel</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/G.+W.+F.+Hegel'>G. W. F. Hegel</a></p>
 </li>
 
 <li>
@@ -370,19 +369,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 19, 2015 18:36:35 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.130.41)
+  <p>
+  Last revised on July 28, 2018 at 07:55:47.
+  See the <a href="https://ncatlab.org/nlab/history/Karl Rosenkranz" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Karl+Rosenkranz" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Karl+Rosenkranz" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Karl+Rosenkranz/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Karl+Rosenkranz" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Karl+Rosenkranz" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Karl Rosenkranz/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Karl+Rosenkranz" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Karl+Rosenkranz" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Karl+Rosenkranz" id="view_source" rel="nofollow">Source</a>
